# 7

./: README.md  pyproject.toml  setup.cfg  setup.py
clean_folder/: sort.py
clean_folder.egg-info/: PKG-INFO  SOURCES.txt
