[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "clean_folder"
version = "0.0.1"
description = "doing smth"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]